--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
 			<version>2.0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.slytechs.jnet</groupId>
-			<artifactId>core-protocols</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>com.slytechs.jnet.protocol</groupId>
+			<artifactId>protocol-pack-core</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
