--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.slytechs.jnet.jnetpcap</groupId>
-			<artifactId>jnetpcap-api</artifactId>
-			<version>2.0.3-SNAPSHOT</version>
+			<artifactId>jnetpcap-wrapper</artifactId>
+			<version>2.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.slytechs.jnet.protocol</groupId>
