--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.slytechs.jnet.jnetpcap</groupId>
 		<artifactId>jnetpcap-sdk-parent</artifactId>
-		<version>0.10.0</version>
+		<version>0.11.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>jnetpcap-api</artifactId>
 	<!-- mvn versions:set -DnewVersion=_new_version_ -->
@@ -18,17 +18,17 @@
 		<dependency>
 			<groupId>com.slytechs.jnet.jnetpcap</groupId>
 			<artifactId>jnetpcap-wrapper</artifactId>
-			<version>2.1.0</version>
+			<version>2.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.slytechs.jnet.protocol</groupId>
 			<artifactId>protocol-pack-api</artifactId>
-			<version>0.10.0</version>
+			<version>0.11.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.slytechs.jnet.protocol</groupId>
-			<artifactId>protocol-pack-web</artifactId>
-			<version>0.10.0</version>
+			<groupId>com.slytechs.jnet.jnetruntime</groupId>
+			<artifactId>jnetruntime-api</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
