--- a/pom.xml
+++ b/pom.xml
@@ -3,88 +3,24 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<url>https://www.slytechs.com</url>
+	<!-- mvn versions:set -DnewVersion=_new_version_ -->
+	<artifactId>jnetpcap-api</artifactId>
+	<name>jNetPcap API</name>
+	<description>A protocol aware PCAP API for packet dissection, reassembly and
+		analysis
+	</description>
+
 	<parent>
 		<groupId>com.slytechs.jnet.jnetpcap</groupId>
 		<artifactId>jnetpcap-sdk-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>jnetpcap-api</artifactId>
-	<!-- mvn versions:set -DnewVersion=_new_version_ -->
-	<name>jNetPcap API</name>
-	<description>A protocol aware PCAP API for packet dissection, reassembly and
-		analysis</description>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
-					<windowtitle>Public API for ${project.name}
-						${project.version}</windowtitle>
-					<testDoctitle>Test API for ${project.name}
-						${project.version}</testDoctitle>
-					<testWindowtitle>Test API for ${project.name}
-						${project.version}</testWindowtitle>
-					<encoding>${java.encoding}</encoding>
-					<source>${jdk.version}</source>
-					<overview>${basedir}/Overview.html</overview>
-					<additionalOptions> ${java.preview} </additionalOptions>
-					<excludePackageNames>*.internal.*</excludePackageNames>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<id>aggregate-no-fork</id>
-						<configuration>
-							<goal>aggregate-no-fork</goal>
-							<show>public</show>
-							<skip>false</skip>
-						</configuration>
-						<reports>
-							<report>javadoc</report>
-						</reports>
-					</reportSet>
-					<reportSet>
-						<id>test-aggregate-no-fork</id>
-						<configuration>
-							<goal>test-aggregate-no-fork</goal>
-							<show>private</show>
-							<skip>true</skip>
-						</configuration>
-						<reports>
-							<report>test-javadoc</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.slytechs.jnet.jnetpcap</groupId>
-			<artifactId>jnetpcap-wrapper</artifactId>
-			<version>2.3.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.slytechs.jnet.protocol</groupId>
-			<artifactId>protocol-pack-api</artifactId>
-			<version>0.11.0-SNAPSHOT</version>
-		</dependency>
-		<!--
-		https://mvnrepository.com/artifact/com.slytechs.jnet.jnetruntime/jnetruntime-api -->
-		<dependency>
-			<groupId>com.slytechs.jnet.jnetruntime</groupId>
-			<artifactId>jnetruntime-api</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
 	<distributionManagement>
 		<!--  mvn clean site site:stage scm-publish:publish-scm  -->
 		<site>
 			<id>github</id>
-			<url>scm:git:git@github.com:slytechs-repos/${project.artifactId}.git</url>
+			<url>scm:git:git@github.com:slytechs-repos/jnetpcap-api.git</url>
 		</site>
 	</distributionManagement>
 </project>
