--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<url>https://www.slytechs.com</url>
-	<!-- mvn versions:set -DnewVersion=_new_version_ -->
-	<artifactId>jnetpcap-api</artifactId>
-	<name>jNetPcap API</name>
-	<description>A protocol aware PCAP API for packet dissection, reassembly and
-		analysis
-	</description>
 
 	<parent>
 		<groupId>com.slytechs.jnet.jnetpcap</groupId>
 		<artifactId>jnetpcap-sdk-parent</artifactId>
 		<version>0.11.0-SNAPSHOT</version>
 	</parent>
+	
+	<!-- mvn versions:set -DnewVersion=_new_version_ -->
+	<artifactId>jnetpcap-api</artifactId>
+	<name>jNetPcap SDK - API</name>
+	<description>A protocol aware PCAP API for packet dissection, reassembly and analysis</description>
 
 	<distributionManagement>
 		<!--  mvn clean site site:stage scm-publish:publish-scm  -->
@@ -23,18 +22,19 @@
 			<url>scm:git:git@github.com:slytechs-repos/jnetpcap-api.git</url>
 		</site>
 	</distributionManagement>
+	
 	<dependencies>
 	  <dependency>
 	    <groupId>com.slytechs.jnet.protocol</groupId>
-	    <artifactId>protocol-pack-api</artifactId>
-	    <version>0.10.0-SNAPSHOT</version>
+	    <artifactId>protocol-api</artifactId>
+	    <version>${protocol-sdk.version}</version>
 	  </dependency>
 	  
 	  <dependency>
 		<groupId>com.slytechs.jnet.jnetpcap</groupId>
 		<artifactId>jnetpcap-wrapper</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>${jnetpcap-wrapper.version}</version>
 	  </dependency>
-	  
 	</dependencies>
+	
 </project>
