--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>com.cryptlex.lexactivator</groupId>
+		    <artifactId>lexactivator</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
